--- a/main.css
+++ b/main.css
@@ -20,3 +20,39 @@
 .inStock {
     color: green;
 }
+
+.reviews {
+    order: 1;
+}
+
+.review-form p input,
+.review-form p textarea {
+    width: 100%;
+}
+
+.review-form p input[type="submit"] {
+    width: 100px;
+}
+
+.tab_box {
+    margin-top: 35px;
+    width: 20%;
+}
+
+#rating {
+    background: #56b2ce;
+    border: none;
+    color: #ffffff;
+}
+.tab {
+    padding: 4px;
+    cursor: pointer;
+    border-radius: 4px;
+    margin-right: 16px;
+    border: 1px solid #56b2ce;
+}
+
+.activeTab {
+    color: #fff;
+    background: #56b2ce;
+}
